------------------------------------------------------------------------

2012-01-22

Merged changes from Hansinators 1.1 Version
* code size improvement
* some minor stuff

------------------------------------------------------------------------

2012-01-22

* interrupt deadlock bug fixed: if interrupt handler was executing while
  the interrupt condition occurred, the interrupt line stayed low, and interrupt
  was never entered again (edge triggered). This is now fixed by looping in
  the interrupt handler until no interrupt conditions are present.
* Support form RFM12BP added. Tested working.
* more RFM12 parameters adjustable in config file
 
------------------------------------------------------------------------

2010-07-11 13:37:00 +0100 (Sun, 11 Jul 2010)
* branch in 1.2-dev
* implemented callback function for receiving
* old (unused) config variable "LOW_POWER" removed from demo config
* rfm12_ctrl extended with several functions
* implemented delayed execution of rf12 instructions at the end of the interrupt/polling routine
* corrected TXCONF_POWER_* bitmasks according to current revision of the datasheet

------------------------------------------------------------------------

2010-01-09 19:40:33 +0100 (Sat, 09 Jan 2010)
nur jedes 2.te Packet wurde gesendet - vielen Dank an werner.baumann at t-online.de

------------------------------------------------------------------------

2009-11-30 21:22:02 +0100 (Mon, 30 Nov 2009)
fixed frequency calculation

------------------------------------------------------------------------

2009-11-30 20:49:41 +0100 (Mon, 30 Nov 2009)
comitted patch from Mikl?\195?\179s M?\195?\161rton

------------------------------------------------------------------------

2009-11-19 00:03:21 +0100 (Thu, 19 Nov 2009) 
rfm12 ask sending needed some fixes. works flawlessly now!

------------------------------------------------------------------------

2009-11-03 17:18:43 +0100 (Tue, 03 Nov 2009) 
updated doxygen config
